# twingraph/src/main/openapi/twingraph.yaml
@@ -179,12 +179,6 @@ paths:
             examples:
               GetAllNodes:
                 $ref: '#/components/examples/GetAllNodes'
-          application/yaml:
-            schema:
-              $ref: '#/components/schemas/TwinGraphQuery'
-            examples:
-              GetAllNodes:
-                $ref: '#/components/examples/GetAllNodes'
       responses:
         '200':
           description: Successful response
